# wagtail-storages

./: .gitignore  .gitlab-ci.yml  .travis.yml  CHANGELOG.rst  LICENSE  MANIFEST.in  README.rst  setup.cfg  tox.ini
.github/workflows/: test.yml
wagtail_storages/: __init__.py  apps.py  backends.py  factories.py  signal_handlers.py  signals.py  utils.py  wagtail_hooks.py
wagtail_storages/management/commands/: fix_document_acls.py  fix_documents_acls.py
wagtail_storages/tests/: base.py  settings.py  test_backends.py  test_management_commands.py  test_protected_documents.py  test_signal_handlers.py  test_utils.py  test_wagtail_hooks.py  urls.py  utils.py
