[metadata]
name = wagtail-storages
version = attr: wagtail_storages.__version__
description = Use AWS S3 with private documents in Wagtail.
long-description = file: README.rst
author = Tomasz Knapik
author_email = hi@tmkn.org
url = https://github.com/torchbox/wagtail-storages
license = BSD 2-Clause License
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Internet :: WWW/HTTP
    Framework :: Django
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Framework :: Django :: 4.1
    Framework :: Wagtail
    Framework :: Wagtail :: 4
keywords =
    wagtail
    s3
    django
    storages
    storage

[options]
packages = find:
install_requires =
    Wagtail >=4.1
    django-storages[boto3] <2
python_requires = >=3.6

[options.packages.find]
exclude =
    wagtail_storages.tests*

[options.extras_require]
testing =
    coverage ==5.0.3
    factory_boy ==2.12.0
    moto ==3.1.8
    black ==22.3.0
    isort
    flake8

[bdist_wheel]
python-tag = py3

[flake8]
max-line-length = 88

[isort]
line_length=88
use_parentheses=True
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
known_django = django
known_wagtail = wagtail
known_third_party = factory,storages,boto3,moto
known_first_party = wagtail_storages
sections = FUTURE,STDLIB,DJANGO,WAGTAIL,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
