[metadata]
name = wagtail-storages
version = attr: wagtail_storages.__version__
description = Use AWS S3 with private documents in Wagtail.
long-description = file: README.rst
author = Torchbox
author_email = info@torchbox.com
maintainer = Torchbox
maintainer_email = info@torchbox.com
url = https://github.com/torchbox/wagtail-storages
license = BSD 3-Clause License
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Topic :: Internet :: WWW/HTTP
    Framework :: Django
    Framework :: Django :: 4.2
    Framework :: Django :: 5.1
    Framework :: Django :: 5.2
    Framework :: Wagtail
    Framework :: Wagtail :: 6
    Framework :: Wagtail :: 7
keywords =
    wagtail
    s3
    django
    storages
    storage

[options]
packages = find:
install_requires =
    Django >=4.2
    Wagtail >=6.3
    django-storages[boto3] <2
python_requires = >=3.10

[options.packages.find]
exclude =
    wagtail_storages.tests*

[options.extras_require]
testing =
    coverage ==7.5.2
    factory_boy ==3.3.0
    moto[s3] >=5,<6
    black ==24.4.2
    isort
    flake8

[bdist_wheel]
python-tag = py3

[flake8]
max-line-length = 88

[isort]
line_length=88
use_parentheses=True
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
known_django = django
known_wagtail = wagtail
known_third_party = factory,storages,boto3,moto
known_first_party = wagtail_storages
sections = FUTURE,STDLIB,DJANGO,WAGTAIL,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
